update trial .ini file

--- a/trial_exoNCDM.ini
+++ b/trial_exoNCDM.ini
@@ -3,7 +3,7 @@ output = mPk
 k_output_values = 0.001, 0.01, 0.1, 1
 write warnings = yes
 
-Omega_cdm = 0.262
+omega_cdm = 0.00001
 omega_b = 0.02241
 H0 = 67.56
 tau_reio =  0.05527
@@ -16,7 +16,7 @@ N_ur = 2.0328
 m_ncdm = 0.06, 100.0
 # omega_ncdm for the neutrino will be derived from the given mass, while for the wdm
 # the code renormalizes the psd function so as to get the given omega_ncdm
-omega_ncdm = 0, 0.01
+omega_ncdm = 0, 0.262
 
 # Here 0 denotes fermi-dirac distribution, 1 the wdm distribution
 background_ncdm_psd = 0, 1
