--- a/trial_exoNCDM.ini
+++ b/trial_exoNCDM.ini
@@ -1,5 +1,5 @@
-root = output/trial_exoNCDM_
-output = mPk
+root = output/trial_exoNCDM_nofluid_
+output = mPk, tCl
 k_output_values = 0.001, 0.01, 0.1, 1
 write warnings = yes
 
@@ -12,6 +12,7 @@ n_s = 0.96144
 #two ncdm species, one is a neutrino, the other is the wdm
 N_ncdm = 2
 N_ur = 2.0328
+
 # mass of neutrino and wdm are 0.06 eV and 1 keV
 m_ncdm = 0.06, 100.0
 # omega_ncdm for the neutrino will be derived from the given mass, while for the wdm
@@ -23,6 +24,9 @@ background_ncdm_psd = 0, 1
 
 ### list of parameters to be passed for the wdm distribution
 ncdm_psd_parameters = 11, 3.5
+
+Quadrature strategy = 0,2
+Number of momentum bins = 30, 300
 
 input_verbose = 1
 background_verbose = 1
