increased default value of _QUADRATURE_MAX_

--- a/trial_exoNCDM.ini
+++ b/trial_exoNCDM.ini
@@ -1,7 +1,11 @@
-root = output/trial_exoNCDM_nofluid_
-output = mPk, tCl
-k_output_values = 0.001, 0.01, 0.1, 1
+root = output/trial_exoNCDM_
+output = mPk, tCl, pCl, lCl
+lensing = yes
+l_max_scalars = 2600
+#k_output_values = 0.001, 0.01, 0.1, 1
 write warnings = yes
+P_k_max_h/Mpc = 200
+z_max_pk = 3.0
 
 omega_cdm = 0.00001
 omega_b = 0.02241
@@ -13,20 +17,24 @@ n_s = 0.96144
 N_ncdm = 2
 N_ur = 2.0328
 
-# mass of neutrino and wdm are 0.06 eV and 1 keV
-m_ncdm = 0.06, 100.0
+# mass of neutrino and wdm are 0.06 eV and 2 keV
+m_ncdm = 0.06, 2000.0
 # omega_ncdm for the neutrino will be derived from the given mass, while for the wdm
 # the code renormalizes the psd function so as to get the given omega_ncdm
-omega_ncdm = 0, 0.262
+Omega_ncdm = 0, 0.262
 
 # Here 0 denotes fermi-dirac distribution, 1 the wdm distribution
 background_ncdm_psd = 0, 1
 
 ### list of parameters to be passed for the wdm distribution
-ncdm_psd_parameters = 11, 3.5
+# first one is alpha, second one is y_avg
+ncdm_psd_parameters = 1.0, 1.0
 
-Quadrature strategy = 0,2
-Number of momentum bins = 30, 300
+#with all this commented out, it is very fast
+#Quadrature strategy = 0,2
+#Number of momentum bins = 10, 50
+#gauge = new
+k_scalar_k_per_decade_for_pk = 50
 
 input_verbose = 1
 background_verbose = 1
