--- a/trial_exoNCDM.ini
+++ b/trial_exoNCDM.ini
@@ -18,8 +18,8 @@ N_ncdm = 2
 N_ur = 2.0328
 
 
-# mass of neutrino and wdm are 0.06 eV and 7 keV
-m_ncdm = 0.06, 7000.0
+# mass of neutrino and wdm are 0.06 eV and 2 keV
+m_ncdm = 0.06, 2000.0
 # omega_ncdm for the neutrino will be derived from the given mass, while for the wdm
 # the code renormalizes the psd function so as to get the given omega_ncdm
 Omega_ncdm = 0, 0.262
@@ -29,13 +29,13 @@ background_ncdm_psd = 0, 1
 
 ### list of parameters to be passed for the wdm distribution
 # first one is alpha, second one is y_avg
-ncdm_psd_parameters = 1.0, 1.0
+ncdm_psd_parameters = 0.001, 5.0
 
 #with all this commented out, it is very fast
 #Quadrature strategy = 0,2
 #Number of momentum bins = 10, 50
 #gauge = new
-k_scalar_k_per_decade_for_pk = 50
+#k_scalar_k_per_decade_for_pk = 50
 
 
 input_verbose = 1
